--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -25,10 +25,10 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="song in model.data.tracks.items">
+            <tr ng-repeat="song in model.data">
                 <td>
                     <div class="image-homepage-container">
-                        <img ng-src="{{song.album.images[0].url}}"
+                        <img ng-src="{{song.cover}}"
                              height="100px"/>
                         <div class="after">
                             <span ng-click="model.addSong(song)"
@@ -39,8 +39,8 @@
                 <td>
                     {{song.name}}
                 </td>
-                <td>{{song.artists[0].name}}</td>
-                <td>{{song.album.name}}</td>
+                <td>{{song.artist}}</td>
+                <td>{{song.album}}</td>
             </tr>
             </tbody>
         </table>
