adding song from spotify

--- a/public/project/client/views/home/home.view.html
+++ b/public/project/client/views/home/home.view.html
@@ -37,7 +37,7 @@
                     </div>
                 </td>
                 <td>
-                    {{song.name}}
+                    {{song.title}}
                 </td>
                 <td>{{song.artist}}</td>
                 <td>{{song.album}}</td>
